# terraform-generate-snippets

./: .gitignore  Makefile  README.cbmd  README.md  README.org  all_providers.py  color.py  generate_snippets.py  make_providers_dirs.py  pyproject.toml  tgs.py
providers/activedirectory/: activedirectory-schema-0.5.1-pre.json  activedirectory.tf
providers/ad/: ad-schema-0.1.0.json  ad.tf
providers/airtable/: airtable-schema-0.1.0.json  airtable.tf
providers/aiven/: aiven-schema-0.1.0.json  aiven.tf
providers/akamai/: akamai-schema-0.9.1.json  akamai.tf
providers/akc/: akc.tf
providers/algolia/: algolia-schema-0.3.0.json  algolia.tf
providers/alicloud/: alicloud-schema-1.97.0.json  alicloud.tf
providers/amixr/: amixr-schema-0.2.1.json  amixr.tf
providers/ansible/: ansible-schema-1.0.4.json  ansible.tf
providers/ansiblevault/: ansiblevault-schema-2.1.0.json  ansiblevault.tf
providers/apigee/: apigee-schema-0.0.23.json  apigee.tf
providers/appd/: appd.tf
providers/appdynamics/: appdynamics-schema-0.1.0.json  appdynamics.tf
providers/aptible/: aptible-schema-0.1.2.json  aptible.tf
providers/archive/: archive-schema-1.3.0.json  archive.tf
providers/argocd/: argocd-schema-0.4.5.json  argocd.tf
providers/artifactory/: artifactory-schema-2.2.3.json  artifactory.tf
providers/auth0/: auth0-schema-0.14.0.json  auth0.tf
providers/aviatrix/: aviatrix-schema-2.16.3.json  aviatrix.tf
providers/aws/: aws-schema-3.7.0.json  aws.tf
providers/aws-spot-instance/: aws-spot-instance.tf
providers/aws-synthetics/: aws-synthetics.tf
(+468 files in other folders)
