[tool.poetry]
name = "terraform-generate-snippets"
version = "0.1.0"
description = ""
authors = ["Anders Pettersen <anders.k.pettersen@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
